tests/sksl/errors/golden/BadFieldName.glsl
### Compilation failed:

error: 3: type 'S' does not have a field named 'missing'
1 error
